@@ -1,5 +1,10 @@
 2015-07-22  Gavin Smith  <gavinsmith0123@gmail.com>
 
+	* tp/Texinfo/Convert/XSParagraph/mylib/xspara.c (xspara_add_text):
+	Remove space doubling at end of sentence within a @w.
+
+2015-07-22  Gavin Smith  <gavinsmith0123@gmail.com>
+
 	* doc/texinfo.texi (Writing A Menu): Move node before "Menu 
 	Location" node.
 	(Menus, Menu Location): Move advice on writing short nodes to 
